# ani-tracker

./: .dockerignore  .env  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  index.html
.github/workflows/: ci-deploy.yml  fly-deploy.yml  general.yml
assets/styling/: aniItem.css  aniList.css  app.css  favorite.css  history.css  home.css  main.css  navbar.css  search.css
conf/: configuration.yaml
migrations/: 20250826052359_create_init_tables.sql
src/: entry_server.rs  entry_web.rs  lib.rs  main.rs
src/backend/: mod.rs  po.rs
src/backend/db/: mod.rs
src/backend/db/postgresql/: common.rs  dao.rs  mod.rs  pool.rs
src/backend/service/: ani_info.rs  mod.rs
src/backend/tasker/: commands.rs  mod.rs  scheduler.rs
src/backend/timer_tasker/: commands.rs  mod.rs  scheduler.rs  task.rs
src/backend/utils/: date_utils.rs  mod.rs
src/client/: mod.rs
src/client/components/: ani_item.rs  ani_list.rs  mod.rs  search.rs  theme.rs
src/client/route/: router.rs
src/client/views/: app.rs  favorite.rs  history.rs  home.rs  mod.rs  navbar.rs  notfound.rs
src/components/: ani_info.rs  ani_item.rs  ani_list.rs  echo.rs  mod.rs  search.rs  theme.rs
src/configuration/: config.rs  mod.rs
src/route/: mod.rs  router.rs
src/utils/: date_utils.rs  http_client.rs  mod.rs
src/views/: app.rs  favorite.rs  history.rs  home.rs  mod.rs  navbar.rs  notfound.rs
tests/: health_test.rs
