[package]
name = "ani-tracker"
version = "0.1.0"
authors = ["likanug <likanug.g@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4",  features = ["alloc"] }
once_cell = "1.21.3"
# anyhow = "1"
thiserror = "2"
regex = "1.11.1"
web-sys = { version = "0.3.77", features = ["MediaQueryList", "DomTokenList", "Storage"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
